[metadata]
name = whendo
version = attr: whendo._version.version
description = "action scheduling library"
long_description = file: README.md, LICENSE
author_email = "beaver@electronhead.com"
license = "MIT"
license-file = LICENSE
keywords = ["scheduling", "api"]
classifiers = [
    "Intended Audience :: Developers pre-alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent"
    ]

[options]
install_requires =
    uvicorn >= 0.13.3
    fastapi >= 0.63.0
    pydantic >= 1.7.3
    schedule >= 1.0.0
    requests >= 2.25.1
    netifaces >= 0.10.9
    Mock.GPIO >= 0.1.7
include_package_data = False
test_suite = test

package_dir =
    =whendo
packages = find:

[options.packages.find]
where = whendo
