[metadata]
name = whendo
version = attr: whendo._version.version
description = action scheduling api, sdk
long_description = file: README.md
long_description_content_type = text/markdown
author_email = beaver@electronhead.com
url = https://github.com/electronhead/whendo
license = MIT
keywords = scheduling, api
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
install_requires =
    uvicorn >= 0.13.3
    fastapi >= 0.63.0
    pydantic >= 1.7.3
    schedule >= 1.0.0
    requests >= 2.25.1
    netifaces >= 0.10.9
    Mock.GPIO >= 0.1.7
# tests_require =
#     pytest >= 6.2.2
#     httpx >= 0.16.1
#     pytest-asyncio >= 0.14.0
#     asyncio >= 3.4.3

include_package_data = False
# test_suite = tests

package_dir =
    = .
packages = find:

# [options.packages.find]
exclude =
    tests
