[metadata]
name = whendo
version = attr: whendo._version.version
description = action scheduling api, sdk
long_description = file: README.md
long_description_content_type = text/markdown
author_email = beaver@electronhead.com
url = https://github.com/electronhead/whendo
license = MIT
keywords = scheduling, api
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
install_requires =
    uvicorn >= 0.13.3
    fastapi >= 0.63.0
    pydantic >= 1.7.3
    schedule >= 1.0.0
    requests >= 2.25.1

include_package_data = False

package_dir =
    = .
packages = find:

[options.packages.find]
exclude =
    tests
